2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add opcodes from 2.5 and 2.6

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_stdlib.py:
	  For now, return OK if we can't import zope.interface,
	  since there is no skip support in the standard unittest.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	  Add note on setting PYTHONPATH for running tests.
	* test/common.py:
	  Also make trial work for Twisted 1.3.0 which we use for
	  Python 2.3 testing.

2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Add _empty and _unimplemented as opcode dispatchers.
	  Add all missing opcodes for python 2.4
	* pychecker/warn.py:
	  For now, print a NotImplementedError if there are still
	  missing opcodes.  This should be changed to a raise
	  when we've added all opcodes from released python versions.
	* test/main.py:
	  Add new tests for pychecker.CodeChecks
	* test/test_pychecker_CodeChecks.py:
	  Add a test to make sure we have all opcodes handled.

2009-06-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	  Add a note on trial as an option.
	* test/expected/test_dict:
	* test/expected/test_getmodule:
	* test/expected/test_zope_interface:
	  Make everything relative to the test dir
	* test/common.py:
	  Make 'trial test' run similarly to 'python test/main.py'
	  Diff from expected to output, so the + are what the test has.

2009-06-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	  Add notes about the testsuite.
	* test/expected/test_dict:
	* test/input/test_dict.py:
	* test/main.py:
	* test/test_dict.py:
	  Add a test for someDict.keys() in a function which fails in
	  python 2.6, but not earlier.

2009-06-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test3-2.4:
	  Fix expected output to include [system path] like the others.